name:                crapchat
version:             0.1.0.0
author:              Sam Stokes
maintainer:          me@samstokes.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable crapchat
  main-is:             main.hs
  build-depends:       base >=4.5 && <4.6
                     , containers
                     , data-default
                     , mtl
                     , scotty
                     , stm
                     , text
                     , transformers
                     , wai-extra
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
